public/styles.css
/* General Styles */
[hidden] {
  display: none !important;
}

html,
body {
  padding: 0;
  margin: 0;
}

body {
  font-family: Arial, sans-serif;
  padding-top: 20px;
  display: flex;
  flex-direction: column;
}

header {
  text-align: center;
}

footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0;
  width: 100%;
  background-color: #f8f9fa;
  margin: 0;
}

footer small {
  margin: 0px;
  text-align: center;
  padding: 20px;
}

footer .source-link {
  margin-left: auto;
}

header .donate-button img {
  height: 48px;
  width: auto;
  margin-left: 20px;
}

header .donate-button img:hover {
  opacity: 0.8;
}

h1 {
  margin-top: 10px;
}

h2,
h3 {
  padding: 0px;
}

main {
  max-width: 800px;
  width: 100%;
  margin: 0 auto;
  padding: 20px;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  flex: 1;
}

section {
  margin: 0px auto;
  margin-top: 20px;
  width: 100%;
  max-width: 800px;
  box-sizing: border-box;
}

section[hidden] {
  margin: 0px;
  display: none;
}

/* Uploader Styles */
#uploaderSection {
  width: 100%;
  display: flex;
  align-items: stretch;
}

.uploader {
  width: 100%;
  border-radius: 10px;
  padding: 40px;
  text-align: center;
  background-color: #fff;
  transition: background-color 0.3s ease, border-color 0.3s ease;
  cursor: pointer;
}

.uploader.dragover,
.uploader:focus {
  background-color: #e6f7ff;
  border-color: #007bff;
}

.uploader input[type="file"] {
  display: none;
}

.uploader p {
  font-size: 1.2rem;
  color: #666;
}

/* Button Styles */
button {
  padding: 10px 20px;
  font-size: 1rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease, color 0.3s ease;
}

button:not(:disabled):hover {
  border: none !important;
  transform: none !important;
  opacity: 0.8 !important;
}

button:disabled {
  background-color: #ccc;
  cursor: not-allowed;
}

#generateStatementFilesButton {
  background-color: #28a745;
  color: #fff;
}

#importMappingsButton {
  background-color: #17a2b8;
  color: #fff;
}

#startOverSection {
  display: flex;
  align-items: center;
  justify-content: center;
}

#startOverButton {
  background-color: #dc3545;
  color: #fff;
}

/* Form Styles */
.form-group {
  display: flex;
  gap: 20px;
  margin-top: 10px;
}

.input-group {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.input-group label {
  margin-bottom: 5px;
}

.input-group input {
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.button-group {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-top: 20px;
}

/* Security Note */
.security-note small {
  display: flex;
  align-items: center;
  color: #555;
}

.security-note svg {
  margin-right: 8px;
  fill: #333;
}

/* spinnerSection Styles */
.spinnerSection {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.8);
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: center;
}

.spinnerSection[hidden] {
  display: none;
}

.spinner {
  border: 5px solid #f3f3f3;
  border-top: 5px solid #3498db;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

/* Toast Styles */
.toast {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background: #333;
  color: #fff;
  padding: 10px 20px;
  border-radius: 5px;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  z-index: 1000;
}

.toast.show {
  opacity: 1;
}

/* Collapsible Styles */
.content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease, padding 0.3s ease;
  padding: 0 16px;
  border-top: none;
  border-radius: 0 0 4px 4px;
  background-color: #fff;
  margin-bottom: 3px;
}

.content.open {
  padding: 12px 16px;
}

.content p,
.content ol,
.content ul {
  margin: 0;
  padding: 0;
  color: #555;
  line-height: 1.6;
}

.content ul,
.content ol {
  padding-left: 20px;
}

.account-mapping {
  margin-bottom: 15px;
}

.account-label {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 5px;
}

.transaction-count {
  float: right;
}

/* Disable Pointer Events When Processing */
body.processing {
  pointer-events: none;
  user-select: none;
}

#logsSection {
  margin-top: 40px;
  border: 1px solid #ccc;
  overflow: hidden;
  border-radius: 5px;
}

#logsSection header {
  background-color: #f1f1f1;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
}

#logsContainer {
  background-color: #fff;
  overflow-y: auto;
  max-height: 300px;
  padding: 10px;
  transition: max-height 0.3s ease, padding 0.3s ease;
}

#arrow-icon {
  transition: transform 0.3s ease;
  color: #666;
}

#logsSection header h4 {
  color: #666;
  padding: 0;
}

